CSS: metArtTotal fix for small viewport overflow
Nokia responsiveness tests showed total line truncated.

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -53,6 +53,15 @@ header {
 #metArtTotal {
     margin:1rem;
     padding:0;
+    text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden; 
+    };
+
+#metArtTotal: hover {
+    overflow: visible;
+};
+
 }
 
 #theButtons {
@@ -91,9 +100,7 @@ header {
     font-size: 1rem;
     margin-left: 5px;
 }
-#metArtTotal {
-    text-align: center;
-}
+
 
 /*--------------------------------------------Footer   */
 
